--- a/SimplifiedPrototype/index.html
+++ b/SimplifiedPrototype/index.html
@@ -8,13 +8,13 @@
 <body>
 
 
-  <script src="bower_components/three.js/three.js"></script>
+  <!-- <script src="bower_components/three.js/three.js"></script>
   <script src="bower_components/rxjs/dist/rx.all.js"></script>
   <script src="vendors/OrbitControls.js"></script>
 
   <script src="js/classes/Node.js"></script>
   <script src="js/main.js"></script>
-  <script src="js/rxTry.js"></script>
-  <script src="bower_components/requirejs/require.js"></script>
+  <script src="js/rxTry.js"></script> -->
+  <script data-main="js/app" src="bower_components/requirejs/require.js"></script>
 </body>
 </html>
